...
            "state": "translated",
            "value": "關於"
          }
        }
      }
    },
    "Accept": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Accept"
...
            "state": "translated",
            "value": "指派至群組"
          }
        }
      }
    },
    "Attach": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Attach"
...
            "state": "translated",
            "value": "通話中…"
          }
        }
      }
    },
    "Camera": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Camera"
...
            "state": "translated",
            "value": "無法解密來自 %@ 的訊息"
          }
        }
      }
    },
    "Cancel": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Cancel"
...
            "state": "translated",
            "value": "憑證指紋"
          }
        }
      }
    },
    "Chat": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Chat"
...
            "state": "translated",
            "value": "請連接相同的 WiFi 網路以傳輸檔案"
          }
        }
      }
    },
    "Connected": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Connected"
...
            "state": "translated",
            "value": "連線功能"
          }
        }
      }
    },
    "Contacts": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Contacts"
...
            "state": "translated",
            "value": "檔案傳輸"
          }
        }
      }
    },
    "Files": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Files"
...
            "state": "translated",
            "value": "與現有資料合併"
          }
        }
      }
    },
    "Message": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Message"
...
            "state": "translated",
            "value": "下一步"
          }
        }
      }
    },
    "No active connection": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "No active connection"
...
            "state": "translated",
            "value": "通知已被拒絕"
          }
        }
      }
    },
    "OK": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "OK"
...
            "state": "translated",
            "value": "待處理"
          }
        }
      }
    },
    "Photos": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Photos"
...
            "state": "translated",
            "value": "安全性降低"
          }
        }
      }
    },
    "Send": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Send"
...
            "state": "translated",
            "value": "送出錯誤報告"
          }
        }
      }
    },
    "Send File": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Send File"
...
            "state": "translated",
            "value": "語音通話"
          }
        }
      }
    },
    "Voice message": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Voice message"
...
